--- a/admin.html
+++ b/admin.html
@@ -66,7 +66,7 @@
     }
   </script>
 
-  <h1>南口シフト（管理者画面）</h1>
+  <h1>南口シフト（管理画面）</h1>
 
   <div>
     <label>開始日: <input type="date" id="startDate"></label>
