--- a/admin.html
+++ b/admin.html
@@ -27,29 +27,32 @@
       white-space: nowrap;
     }
 
-    /* ✔ チェック欄（最小幅） */
+    /* ✔ チェック列 */
     th:first-child,
     td:first-child {
       width: 30px;
-      max-width: 30px;
       min-width: 30px;
-      text-align: center;
+      max-width: 30px;
     }
 
-    /* 名前欄（固定） */
+    /* 🟩 名前列（コンパクト） */
     th:nth-child(2),
     td:nth-child(2) {
-      width: 90px;
-      min-width: 80px;
-      max-width: 100px;
-      text-align: left;
+      width: 100px;
+      min-width: 90px;
+      max-width: 110px;
     }
 
-    /* 残りの回答列（すべて統一幅） */
+    /* 📅 回答欄（最長表示に合わせる） */
     td, th {
-      min-width: 120px;
-      max-width: 120px;
+      min-width: 140px;
+      max-width: 140px;
+      text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
+
 
     .note-table td:last-child,
     .note-table th:last-child {
