--- a/form.html
+++ b/form.html
@@ -34,7 +34,8 @@
   <h1>南口シフト</h1>
 
   <label>名前：</label>
-  <input type="text" id="username"><br><br>
+  <input type="text" id="username">
+  <p><font size="3">※下の名前を入力してください。</font></p><br><br>
 
   <table id="calendar">
     <thead>
