--- a/admin.html
+++ b/admin.html
@@ -66,33 +66,32 @@
         left: 30px;
         z-index: 2;
         background-color: #fff;
-        width: 100px;
-        min-width: 90px;
-        max-width: 120px;
+        width: 90px;
+        min-width: 80px;
+        max-width: 100px;
       }
 
-      .name-col {
-        font-weight: bold;
-      }
-
-      .controls {
+      .note-table {
+        width: 100%;
+        table-layout: fixed;
+        border-collapse: collapse;
         margin-top: 20px;
       }
 
-      table tbody tr:nth-child(even) td {
+      .note-table th, .note-table td {
+        border: 1px solid #ccc;
+        padding: 6px;
+        text-align: left;
+        white-space: normal;
+        word-break: break-word;
+      }
+
+      .scroll-container table tbody tr:nth-child(even) td {
         background-color: #b9e5f8e0;
       }
 
-      td.no-stripe,
-      th.no-stripe {
-        background-color: transparent !important;
-        border: none;
-      }
-
-      .note-table td:last-child,
-      .note-table th:last-child {
-        width: 200px;
-        text-align: left;
+      .note-table tbody tr:nth-child(even) td {
+        background-color: #b9e5f8e0;
       }
     </style>
 </head>
@@ -234,7 +233,7 @@
       const allDates = getDatesInRange(range.start, range.end);
       const weeks = splitWeeks(allDates);
 
-      // ← 表全体をまとめるスクロールラッパー
+      // スクロール可能なシフトテーブルのラッパー
       const scrollWrapper = document.createElement("div");
       scrollWrapper.className = "scroll-container";
 
@@ -243,7 +242,7 @@
 
         const thead = document.createElement("thead");
         const headRow1 = document.createElement("tr");
-        headRow1.innerHTML = "<th></th><th>名前</th>";
+        headRow1.innerHTML = "<th class='checkbox-col'></th><th class='name-col'>名前</th>";
         weekDates.forEach(d => {
           const th = document.createElement("th");
           th.textContent = d ? d.youbi : "";
@@ -252,7 +251,7 @@
         thead.appendChild(headRow1);
 
         const headRow2 = document.createElement("tr");
-        headRow2.innerHTML = "<th>✔</th><th></th>";
+        headRow2.innerHTML = "<th class='checkbox-col'>✔</th><th class='name-col'></th>";
         weekDates.forEach(d => {
           const th = document.createElement("th");
           th.textContent = d ? d.day : "";
@@ -262,13 +261,14 @@
         table.appendChild(thead);
 
         const tbody = document.createElement("tbody");
-        data.forEach(entry => {
+        data.forEach((entry, rowIndex) => {
           const row = document.createElement("tr");
 
           const checkbox = document.createElement("td");
           if (weekIndex === 0) {
             checkbox.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${entry._key}">`;
           }
+          checkbox.className = "checkbox-col";
           row.appendChild(checkbox);
 
           const nameCell = document.createElement("td");
@@ -286,28 +286,30 @@
         });
 
         table.appendChild(tbody);
-        scrollWrapper.appendChild(table); // 1つのスクロール領域に全部追加
+        scrollWrapper.appendChild(table);
       });
 
-      container.appendChild(scrollWrapper); // ← 最後にまとめて追加
+      container.appendChild(scrollWrapper);
 
+      // 備考テーブルの作成
       const notes = data.filter(e => e.note && e.note.trim());
       if (notes.length > 0) {
-        const table = document.createElement("table");
-        table.className = "note-table";
+        const noteTable = document.createElement("table");
+        noteTable.className = "note-table";
 
         const thead = document.createElement("thead");
         const headRow = document.createElement("tr");
-        headRow.innerHTML = "<th>✔</th><th>名前</th><th>備考</th>";
+        headRow.innerHTML = "<th class='checkbox-col'>✔</th><th class='name-col'>名前</th><th>備考</th>";
         thead.appendChild(headRow);
-        table.appendChild(thead);
+        noteTable.appendChild(thead);
 
         const tbody = document.createElement("tbody");
-        notes.forEach(e => {
+        notes.forEach((e, rowIndex) => {
           const row = document.createElement("tr");
 
           const check = document.createElement("td");
           check.innerHTML = `<input type="checkbox" class="deleteCheckbox" data-key="${e._key}">`;
+          check.className = "checkbox-col";
           row.appendChild(check);
 
           const name = document.createElement("td");
@@ -322,11 +324,10 @@
           tbody.appendChild(row);
         });
 
-        table.appendChild(tbody);
-        container.appendChild(table);
+        noteTable.appendChild(tbody);
+        container.appendChild(noteTable);
       }
     }
-
 
     function deleteSelected() {
       const checkboxes = document.querySelectorAll(".deleteCheckbox:checked");
